--- a/README.me
+++ b/README.me
@@ -1,1 +1,2 @@
-Test
+An army builder for the Song of Blades and Heroes game system written by 
+Andrea Sfiligoi of Ganesha Games. Built with winforms.
